--- a/index.html
+++ b/index.html
@@ -30,15 +30,30 @@
     <script>
         // 获取已保存的文本内容，并在页面加载时显示
         window.addEventListener('load', async() => {
-            const savedText = await env.mysub.put("sub");
-            document.getElementById('editor').value = savedText || '';
+            fetch("./api/getlist", requestOptions)
+                .then(response => response.text())
+                .then(result => {
+                    document.getElementById('editor').value = result || '';
+                })
+                .catch(error => {
+                    alert("An error occurred while synchronizing data with the server, please check the network connection");
+                    console.log('error', error)
+                });
+
         });
 
         // 处理保存按钮点击事件
         document.getElementById('saveButton').addEventListener('click', async() => {
             const textContent = document.getElementById('editor').value;
-            await env.mysub.put("sub", textContent);
-            alert('保存成功！');
+            fetch("./api/save/" + textContent, requestOptions)
+                .then(response => response.text())
+                .then(result => {
+                    console.log(result);
+                })
+                .catch(error => {
+                    alert("An error occurred while synchronizing data with the server, please check the network connection");
+                    console.log('error', error)
+                });
         });
     </script>
 </body>
