--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
                 credentials: 'include'
             };
             fetch("./api/getlist", requestOptions)
-                .then(response => response.text())
+                .then(response => {
+                    console.log(response.text());
+                })
                 .then(result => {
+                    console.log(result);
                     document.getElementById('editor').value = result || '';
                 })
                 .catch(error => {
@@ -58,7 +61,9 @@
                 credentials: 'include'
             };
             fetch("./api/save/" + textContent, requestOptions)
-                .then(response => response.text())
+                .then(response => {
+                    console.log(response.text());
+                })
                 .then(result => {
                     console.log(result);
                 })
