--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
                 credentials: 'include'
             };
             fetch("./api/getlist", requestOptions)
-                .then(response => {
-                    console.log("loadresp: " + response.text());
-                })
+                .then(response => response.text())
                 .then(result => {
                     console.log("loadresult: " + result);
                     document.getElementById('editor').value = result || '';
