--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
                 credentials: 'include'
             };
             fetch("./api/save/" + textContent, requestOptions)
-                .then(response => {
-                    console.log("saveresp: " + response.text());
-                })
+                .then(response => response.text())
                 .then(result => {
                     console.log("saveresult: " + result);
                     alert("save success !")
