禁止自动换行

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             border-radius: 5px;
             resize: vertical;
             font-size: 16px;
+            white-space: nowrap;
+            /* 禁止自动换行 */
         }
         
         button {
